name:                baxter-text
version:             0.1.0.0
cabal-version:       >=1.10
build-type:          Simple
license:             BSD3
license-file:        LICENSE
copyright:           (c) 2016 Robin KAY
author:              Robin KAY
maintainer:          komadori@gekkou.co.uk
homepage:            http://www.gekkou.co.uk/software/
category:            Graphics
synopsis:            Portable interface for text layout and rendering

flag UsePango
    description: Use then Pango back-end instead of the platform default.
    default: False

library
  exposed-modules:
    Graphics.Baxter.Text.Font
    Graphics.Baxter.Text.Layout
    Graphics.Baxter.Text.Render
  other-modules:
    Graphics.Baxter.Text.Internal.Binding
  build-depends:
    base == 4.*,
    bytestring == 0.10.*,
    text == 1.2.*,
    vector == 0.12.*
  hs-source-dirs: src
  include-dirs: cbits
  default-language: Haskell2010
  build-tools: c2hs
  if os(windows) && !flag(UsePango)
    c-sources: cbits/dwrite-impl.cpp
    cc-options: -std=c++11 -DBTCB_WIDE_CHARS
    extra-libraries: dwrite, d2d1, ole32, stdc++
  else
      if os(darwin) && !flag(UsePango)
        c-sources: cbits/coretext-impl.m
      else
        c-sources: cbits/pango-impl.c
        pkgconfig-depends:
            gobject-2.0 == 2.*, pango == 1.*, pangoft2 == 1.*, freetype2
